DevOps/force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <description>Family Domestic Violence (FDV) / DVSAT, and High Risk Alert for Case and Participant records</description>
    <label>Risk</label>
    <nameField>
        <displayFormat>RISK-{00000000}</displayFormat>
        <label>Risk Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>