DevOps/force-app/main/default/objects/Risk__c/fields/Abuse_or_Neglect__c.field-meta.xml
<CustomField>
    <fullName>Abuse_or_Neglect__c</fullName>
    <label>Abuse or Neglect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abuse (physical, sexual, emotional)</fullName>
            </value>
            <value>
                <fullName>Evidence of neglect</fullName>
            </value>
            <value>
                <fullName>History of abuse and neglect</fullName>
            </value>
            <value>
                <fullName>Community Service Involvement (ChildProtection Issues)</fullName>
            </value>
            <value>
                <fullName>Aggression from others</fullName>
            </value>
            <value>
                <fullName>Exploitation from others</fullName>
            </value>
            <value>
                <fullName>Being targeted by others</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>