DevOps/force-app/main/default/objects/Risk__c/fields/Abuse_or_neglect_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Abuse_or_neglect_Mitigation_Plan__c</fullName>
    <label>Abuse or neglect (Mitigation Plan)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>