DevOps/force-app/main/default/objects/Risk__c/fields/Abuse_or_Neglect_Rating__c.field-meta.xml
<CustomField>
    <fullName>Abuse_or_Neglect_Rating__c</fullName>
    <label>Abuse or Neglect (Rating)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>