DevOps/force-app/main/default/objects/Risk__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <description>Any additional and related actions to be taken in managing the Client/Participant</description>
    <inlineHelpText>Any additional and related actions to be taken in managing the Client/Participant</inlineHelpText>
    <label>Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DVSAT</fullName>
            </value>
            <value>
                <fullName>Police Notification</fullName>
            </value>
            <value>
                <fullName>ROSH</fullName>
            </value>
            <value>
                <fullName>Mental Health Access Line</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>