DevOps/force-app/main/default/objects/Risk__c/fields/Advise_buddy_manager_of_incident__c.field-meta.xml
<CustomField>
    <fullName>Advise_buddy_manager_of_incident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advise buddy if there has been an incident and complete an Incident Report as soon as possible. Notify your manager of the incident.</description>
    <inlineHelpText>Advise buddy if there has been an incident and complete an Incident Report as soon as possible. Notify your manager of the incident.</inlineHelpText>
    <label>Advise buddy &amp; manager of incident</label>
    <type>Checkbox</type>
</CustomField>