DevOps/force-app/main/default/objects/Risk__c/fields/Agency_to_put_restriction_in_place__c.field-meta.xml
<CustomField>
    <fullName>Agency_to_put_restriction_in_place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency to put restriction in place:</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>