DevOps/force-app/main/default/objects/Risk__c/fields/An_Agency_Representative_is_Attending__c.field-meta.xml
<CustomField>
    <fullName>An_Agency_Representative_is_Attending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you going with a representative from another agency?</description>
    <inlineHelpText>Are you going with a representative from another agency?</inlineHelpText>
    <label>An Agency Representative is Attending</label>
    <type>Checkbox</type>
</CustomField>