DevOps/force-app/main/default/objects/Risk__c/fields/Are_there_any_hazards__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_hazards__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any hazards.</inlineHelpText>
    <label>Are there any hazards?</label>
    <type>Checkbox</type>
</CustomField>