DevOps/force-app/main/default/objects/Risk__c/fields/Are_they_still_current_and_relevant__c.field-meta.xml
<CustomField>
    <fullName>Are_they_still_current_and_relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are they still current and relevant?</description>
    <inlineHelpText>Are they still current and relevant?</inlineHelpText>
    <label>Are they still current and relevant?</label>
    <type>Checkbox</type>
</CustomField>