DevOps/force-app/main/default/objects/Risk__c/fields/Arrange_a_point_of_contact_for_call_ins__c.field-meta.xml
<CustomField>
    <fullName>Arrange_a_point_of_contact_for_call_ins__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Arrange a point of contact for call-ins at start and end of visit.</description>
    <inlineHelpText>Arrange a point of contact for call-ins at start and end of visit.</inlineHelpText>
    <label>Arrange a point of contact for call-ins</label>
    <type>Checkbox</type>
</CustomField>