DevOps/force-app/main/default/objects/Risk__c/fields/Assess_and_respond_when_door_opens__c.field-meta.xml
<CustomField>
    <fullName>Assess_and_respond_when_door_opens__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Arrange a point of contact for call-ins at start and end of visit.</description>
    <label>Assess and respond when door opens</label>
    <type>Checkbox</type>
</CustomField>