DevOps/force-app/main/default/objects/Risk__c/fields/Before_you_leave_for_a_home_visit_Note__c.field-meta.xml
<CustomField>
    <fullName>Before_you_leave_for_a_home_visit_Note__c</fullName>
    <description>Before you leave for a home visit make sure Note:</description>
    <inlineHelpText>Before you leave for a home visit make sure Note:</inlineHelpText>
    <label>Before you leave for a home visit Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>