DevOps/force-app/main/default/objects/Risk__c/fields/Behaviours_of_Concern__c.field-meta.xml
<CustomField>
    <fullName>Behaviours_of_Concern__c</fullName>
    <description>Behaviours of Concern</description>
    <inlineHelpText>Behaviours of Concern</inlineHelpText>
    <label>Behaviours of Concern</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self-harm / Self Injury</fullName>
            </value>
            <value>
                <fullName>Family / Domestic Violence history</fullName>
            </value>
            <value>
                <fullName>Family / Domestic Violence current</fullName>
            </value>
            <value>
                <fullName>Assault –physical</fullName>
            </value>
            <value>
                <fullName>Assault –verbal</fullName>
            </value>
            <value>
                <fullName>Psychological/emotionalabuse</fullName>
            </value>
            <value>
                <fullName>Intimidation –physical</fullName>
            </value>
            <value>
                <fullName>Intimidation–verbal(threats)</fullName>
            </value>
            <value>
                <fullName>Access to weapons and skills/knowledge to injure others</fullName>
            </value>
            <value>
                <fullName>Destructiveness</fullName>
            </value>
            <value>
                <fullName>Use of projectiles(throwing) or weapons</fullName>
            </value>
            <value>
                <fullName>Appears or behaves in an agitated manner</fullName>
            </value>
            <value>
                <fullName>Persistent low mood</fullName>
            </value>
            <value>
                <fullName>Suicideideation/attempts</fullName>
            </value>
            <value>
                <fullName>Isolated</fullName>
            </value>
            <value>
                <fullName>Feelings of loss of control</fullName>
            </value>
            <value>
                <fullName>Recent behaviour/lifestyle changes</fullName>
            </value>
            <value>
                <fullName>Property damage</fullName>
            </value>
            <value>
                <fullName>Harassment/stalking</fullName>
            </value>
            <value>
                <fullName>Harm to animals</fullName>
            </value>
            <value>
                <fullName>Exploiting others</fullName>
            </value>
            <value>
                <fullName>Hitting or slamming objects</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>