DevOps/force-app/main/default/objects/Risk__c/fields/Behaviours_of_Concern_Comments__c.field-meta.xml
<CustomField>
    <fullName>Behaviours_of_Concern_Comments__c</fullName>
    <label>Behaviours of Concern (Comments)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>