DevOps/force-app/main/default/objects/Risk__c/fields/Behaviours_of_Concern_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Behaviours_of_Concern_Mitigation_Plan__c</fullName>
    <label>Behaviours of Concern (Mitigation Plan)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>