DevOps/force-app/main/default/objects/Risk__c/fields/Behaviours_of_Concern_Scale__c.field-meta.xml
<CustomField>
    <fullName>Behaviours_of_Concern_Scale__c</fullName>
    <label>Behaviours of Concern (Scale)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>