DevOps/force-app/main/default/objects/Risk__c/fields/Car_is_locked__c.field-meta.xml
<CustomField>
    <fullName>Car_is_locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car is locked</label>
    <type>Checkbox</type>
</CustomField>