DevOps/force-app/main/default/objects/Risk__c/fields/Child_Services_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Child_Services_Outcome__c</fullName>
    <label>Child Services Outcome</label>
    <type>TextArea</type>
</CustomField>