DevOps/force-app/main/default/objects/Risk__c/fields/Client_committed_to_just_them_family__c.field-meta.xml
<CustomField>
    <fullName>Client_committed_to_just_them_family__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Obtained commitment from client that only client and their immediate family member(s) and/or identified support person will be in the home when you visit.</description>
    <inlineHelpText>Obtained commitment from client that only client and their immediate family member(s) and/or identified support person will be in the home when you visit.</inlineHelpText>
    <label>Client committed to just them/family</label>
    <type>Checkbox</type>
</CustomField>