DevOps/force-app/main/default/objects/Risk__c/fields/Client_Management_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Client_Management_Strategy__c</fullName>
    <description>Select any one or more relevant options to manage the Client / Participant</description>
    <inlineHelpText>Select any one or more relevant options to manage the Client / Participant</inlineHelpText>
    <label>Client Management Strategy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A single worker</fullName>
            </value>
            <value>
                <fullName>Not to be visited in the home</fullName>
            </value>
            <value>
                <fullName>Office visits only</fullName>
            </value>
            <value>
                <fullName>Two workers</fullName>
            </value>
            <value>
                <fullName>Not to be managed in the community</fullName>
            </value>
            <value>
                <fullName>To be managed with restrictions in place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>