DevOps/force-app/main/default/objects/Risk__c/fields/Clients_Current_Known_Address__c.field-meta.xml
<CustomField>
    <fullName>Clients_Current_Known_Address__c</fullName>
    <label>Clients Current Known Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>