DevOps/force-app/main/default/objects/Risk__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Risk__c</referenceTo>
    <relationshipLabel>Risks (Cloned From)</relationshipLabel>
    <relationshipName>ClonedRisks</relationshipName>
    <type>Lookup</type>
</CustomField>