DevOps/force-app/main/default/objects/Risk__c/fields/Community_Access__c.field-meta.xml
<CustomField>
    <fullName>Community_Access__c</fullName>
    <label>Community Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stay at home unsupervised</fullName>
            </value>
            <value>
                <fullName>Requires supervision to access community</fullName>
            </value>
            <value>
                <fullName>Independent access to community (unsupervised)</fullName>
            </value>
            <value>
                <fullName>Requires transport e.g. daily activities, appointment, outings, day programs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>