DevOps/force-app/main/default/objects/Risk__c/fields/Community_Access_Comment__c.field-meta.xml
<CustomField>
    <fullName>Community_Access_Comment__c</fullName>
    <label>Community Access (Comment)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>