DevOps/force-app/main/default/objects/Risk__c/fields/Community_Access_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Community_Access_Mitigation__c</fullName>
    <label>Community Access (Mitigation)</label>
    <type>TextArea</type>
</CustomField>