DevOps/force-app/main/default/objects/Risk__c/fields/Community_Access_Scale__c.field-meta.xml
<CustomField>
    <fullName>Community_Access_Scale__c</fullName>
    <label>Community Access (Scale)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>