DevOps/force-app/main/default/objects/Risk__c/fields/Concerns_after_Speaking_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Concerns_after_Speaking_with_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you concerned about conducting a home visit after speaking with the client?</description>
    <inlineHelpText>Are you concerned about conducting a home visit after speaking with the client?</inlineHelpText>
    <label>Concerns after Speaking with Client</label>
    <type>Checkbox</type>
</CustomField>