DevOps/force-app/main/default/objects/Risk__c/fields/Consultation__c.field-meta.xml
<CustomField>
    <fullName>Consultation__c</fullName>
    <label>Consultation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Line Manager</fullName>
            </value>
            <value>
                <fullName>Social Futures Program Manager</fullName>
            </value>
            <value>
                <fullName>Social Futures CEO</fullName>
            </value>
            <value>
                <fullName>Child Protection Specialist</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>