DevOps/force-app/main/default/objects/Risk__c/fields/Contact_aware_of_alarm_strategy__c.field-meta.xml
<CustomField>
    <fullName>Contact_aware_of_alarm_strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ensure point of contact is aware of alarm strategy and will respond appropriately if you call to advise i.e. “I am going to be late for the meeting, can you reschedule that for me?”

Point of contact should not be a staff member who may be with clients or out of the office for either the start or end of visit</description>
    <inlineHelpText>Ensure point of contact is aware of alarm strategy and will respond appropriately if you call to advise i.e. “I am going to be late for the meeting, can you reschedule that for me?”</inlineHelpText>
    <label>Contact aware of alarm strategy?</label>
    <type>Checkbox</type>
</CustomField>