DevOps/force-app/main/default/objects/Risk__c/fields/Continue_to_observe_your_surroundings__c.field-meta.xml
<CustomField>
    <fullName>Continue_to_observe_your_surroundings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Continue to observe and be aware of your surrounding</description>
    <inlineHelpText>Continue to observe and be aware of your surrounding</inlineHelpText>
    <label>Continue to observe your surroundings</label>
    <type>Checkbox</type>
</CustomField>