DevOps/force-app/main/default/objects/Risk__c/fields/Copy_of_Risk_Provided_to_Others__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Risk_Provided_to_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have other programs within Social Futures been provided with a copy of or access to the identified risk?</description>
    <inlineHelpText>Have other programs within Social Futures been provided with a copy of or access to the identified risk?</inlineHelpText>
    <label>Copy of Risk Provided to Others?</label>
    <type>Checkbox</type>
</CustomField>