DevOps/force-app/main/default/objects/Risk__c/fields/Current_Associated_Issues__c.field-meta.xml
<CustomField>
    <fullName>Current_Associated_Issues__c</fullName>
    <description>Current associated issues: e.g. mental health, AoD, DV, Physical health</description>
    <inlineHelpText>Does the client have any current associated issues: e.g. mental health, AoD, DV, Physical health</inlineHelpText>
    <label>Current Associated Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>