DevOps/force-app/main/default/objects/Risk__c/fields/Current_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Current_Mental_Health__c</fullName>
    <description>Is the client under the care of a Psychiatrist / Psychologist / Community Mental Health?</description>
    <inlineHelpText>Is the client under the care of a Psychiatrist / Psychologist / Community Mental Health?</inlineHelpText>
    <label>Current Mental Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>