DevOps/force-app/main/default/objects/Risk__c/fields/Date_and_Details_of_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Details_of_Service_Provider__c</fullName>
    <description>Date and Details of Service Provider</description>
    <inlineHelpText>If the box is checked, yes, then please record the Service Provider details and the Date that they were notified</inlineHelpText>
    <label>Date and Details of Service Provider</label>
    <type>TextArea</type>
</CustomField>