DevOps/force-app/main/default/objects/Risk__c/fields/Date_Contacted_DCJ__c.field-meta.xml
<CustomField>
    <fullName>Date_Contacted_DCJ__c</fullName>
    <label>Date Contacted DCJ</label>
    <type>Date</type>
</CustomField>