DevOps/force-app/main/default/objects/Risk__c/fields/Date_of_Child_Services_Response__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Child_Services_Response__c</fullName>
    <label>Date of Child Services Response</label>
    <type>Date</type>
</CustomField>