DevOps/force-app/main/default/objects/Risk__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <label>Date Recorded</label>
    <type>Date</type>
</CustomField>