DevOps/force-app/main/default/objects/Risk__c/fields/Date_Time_Notified__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Notified__c</fullName>
    <label>Date / Time Notified</label>
    <type>DateTime</type>
</CustomField>