DevOps/force-app/main/default/objects/Risk__c/fields/Date_Time_of_First_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_First_Visit__c</fullName>
    <label>Date / Time of First Visit</label>
    <type>DateTime</type>
</CustomField>