DevOps/force-app/main/default/objects/Risk__c/fields/DCJ_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>DCJ_Current_Status__c</fullName>
    <label>DCJ Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Allocated</fullName>
            </value>
            <value>
                <fullName>Case Closed</fullName>
            </value>
            <value>
                <fullName>Case Not Allocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>