DevOps/force-app/main/default/objects/Risk__c/fields/DCJ_Person_Receiving_Call__c.field-meta.xml
<CustomField>
    <fullName>DCJ_Person_Receiving_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DCJ Person Receiving Call</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risks (DCJ Person Receiving Call)</relationshipLabel>
    <relationshipName>Risks4Anf</relationshipName>
    <type>Lookup</type>
</CustomField>