DevOps/force-app/main/default/objects/Risk__c/fields/Debriefing_support_available_on_request__c.field-meta.xml
<CustomField>
    <fullName>Debriefing_support_available_on_request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Debriefing support is available on request or on the suggestion of your manager.</description>
    <inlineHelpText>Debriefing support is available on request or on the suggestion of your manager.</inlineHelpText>
    <label>Debriefing support available on request</label>
    <type>Checkbox</type>
</CustomField>