DevOps/force-app/main/default/objects/Risk__c/fields/Decide_if_you_feel_safe_entering__c.field-meta.xml
<CustomField>
    <fullName>Decide_if_you_feel_safe_entering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Decide if you feel safe entering, if not don’t enter. Prepare a sentence to explain why you are leaving, e.g. “Sorry, I just had a call from work and have to return. I will call you soon to make another time”.</description>
    <inlineHelpText>Decide if you feel safe entering, if not don’t enter. Prepare a sentence to explain why you are leaving, e.g. “Sorry, I just had a call from work and have to return. I will call you soon to make another time”.</inlineHelpText>
    <label>Decide if you feel safe entering</label>
    <type>Checkbox</type>
</CustomField>