DevOps/force-app/main/default/objects/Risk__c/fields/Decision_to_conduct_home_visit__c.field-meta.xml
<CustomField>
    <fullName>Decision_to_conduct_home_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Decision to conduct home visit; include rationale in text box provided</description>
    <inlineHelpText>Decision to conduct home visit; include rationale in text box provided</inlineHelpText>
    <label>Decision to conduct home visit</label>
    <type>Checkbox</type>
</CustomField>