DevOps/force-app/main/default/objects/Risk__c/fields/Depression_Anxiety__c.field-meta.xml
<CustomField>
    <fullName>Depression_Anxiety__c</fullName>
    <label>Depression / Anxiety</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>History of trauma</fullName>
            </value>
            <value>
                <fullName>Suicide risk</fullName>
            </value>
            <value>
                <fullName>Irritability</fullName>
            </value>
            <value>
                <fullName>Fearfulness</fullName>
            </value>
            <value>
                <fullName>Perceived social scrutiny</fullName>
            </value>
            <value>
                <fullName>Feeling over-sensitive or obsessive about something</fullName>
            </value>
            <value>
                <fullName>Trouble with concentration or completing activities/tasks</fullName>
            </value>
            <value>
                <fullName>Feelings of hopelessness and worthlessness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>