DevOps/force-app/main/default/objects/Risk__c/fields/Depression_Anxiety_Comment__c.field-meta.xml
<CustomField>
    <fullName>Depression_Anxiety_Comment__c</fullName>
    <label>Depression / Anxiety (Comment)</label>
    <type>TextArea</type>
</CustomField>