DevOps/force-app/main/default/objects/Risk__c/fields/Depression_Anxiety_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Depression_Anxiety_Mitigation_Plan__c</fullName>
    <label>Depression / Anxiety (Mitigation Plan)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>