DevOps/force-app/main/default/objects/Risk__c/fields/Detail_of_Restriction_Changes__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_Restriction_Changes__c</fullName>
    <description>If there have been any changes to the restriction since it was put in place, please provide detail of those changes and when they came into effect.</description>
    <inlineHelpText>If there have been any changes to the restriction since it was put in place, please provide detail of those changes and when they came into effect.</inlineHelpText>
    <label>Detail of Restriction Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>