DevOps/force-app/main/default/objects/Risk__c/fields/Details_of_Past_Issues__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Past_Issues__c</fullName>
    <description>Details of the agency if the client has previously been identified by NSW Health, Housing NSW, NSW Family and Community Services, Police or any other NSW, interstate, commonwealth or community agency as having issues relating to violence or aggression?</description>
    <inlineHelpText>Details of the agency if the client has previously been identified by NSW Health, Housing NSW, NSW Family and Community Services, Police or any other NSW, interstate, commonwealth or community agency as having issues relating to violence or aggression?</inlineHelpText>
    <label>Details of Past Issues</label>
    <type>TextArea</type>
</CustomField>