DevOps/force-app/main/default/objects/Risk__c/fields/Does_anyone_appear_to_be_unwell__c.field-meta.xml
<CustomField>
    <fullName>Does_anyone_appear_to_be_unwell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does anyone appear to be unwell.</description>
    <inlineHelpText>Does anyone appear to be unwell.</inlineHelpText>
    <label>Does anyone appear to be unwell.</label>
    <type>Checkbox</type>
</CustomField>