DevOps/force-app/main/default/objects/Risk__c/fields/Dogs__c.field-meta.xml
<CustomField>
    <fullName>Dogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dogs?</description>
    <inlineHelpText>Dogs?</inlineHelpText>
    <label>Dogs?</label>
    <type>Checkbox</type>
</CustomField>