DevOps/force-app/main/default/objects/Risk__c/fields/Don_t_leave_personal_items_work_document__c.field-meta.xml
<CustomField>
    <fullName>Don_t_leave_personal_items_work_document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don’t leave personal items/work document</description>
    <label>Don’t leave personal items/work document</label>
    <type>Checkbox</type>
</CustomField>