DevOps/force-app/main/default/objects/Risk__c/fields/Don_t_move_through_different_areas_of_t__c.field-meta.xml
<CustomField>
    <fullName>Don_t_move_through_different_areas_of_t__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don’t move through different areas of the home.</description>
    <inlineHelpText>Don’t move through different areas of the home.</inlineHelpText>
    <label>Don’t move through different areas of t</label>
    <type>Checkbox</type>
</CustomField>